Reformat image storage.